--- a/contact.html
+++ b/contact.html
@@ -93,6 +93,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</ul>
 						</li> 
 						<li class="active"><a href="contact.html">Contact</a></li>
+						<li><a href="healthbot.html">healthbot</a></li>
 					</ul>
 				</div>
 			</div>
